--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="style.css"> </head>
 
 <body>
-    <h1>Join the exploration</h1>
+    <img id="mainimg" src="./images/spacex.png">
+    <h1>Join the <span class="underline">exploration</span></h1>
     <button class="btn">Apply</button>
 
 </body>
