--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <link rel="stylesheet" href="style.css"> </head>
 
 <body>
-    <img id="mainimg" src="./images/spacex.png">
-    <h1>Join the <span class="underline">exploration</span></h1>
-    <button class="btn">Apply</button>
-
+    <div id="hero">
+        <img id="main-logo" src="./images/spacex.png">
+        <h1 id="title">Join the <span class="underline">exploration</span></h1>
+        <button class="btn">Apply</button>
+    </div>
+    <h3>Terms and conditions apply</h3>
 </body>
 
 </html>
